--- a/src/styles/scrollAnimations.scss
+++ b/src/styles/scrollAnimations.scss
@@ -62,15 +62,15 @@ main:not(.profile) > * {
             }
         }
     }
-    .vHr {
-        transform-origin: top;
-        @include scaleAnimations(y);
-        @include animations;
-    }
-    .hHr {
-        @include scaleAnimations(x);
-        @include animations;
-    }
+    // .vHr {
+    //     transform-origin: top;
+    //     @include scaleAnimations(y);
+    //     @include animations;
+    // }
+    // .hHr {
+    //     @include scaleAnimations(x);
+    //     @include animations;
+    // }
 }
 
 .vHr, .hHr {
