--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -21,12 +21,12 @@ const members = [
   {
     name: 'Cedrus Fink', 
   }, 
-  {
-    name: // 'Rien (Rick) Gupta', 
-  }, 
-  {
-    // name: 'Maya Heiss', 
-  }, 
+  // {
+  //   name: 'Rien (Rick) Gupta', 
+  // }, 
+  // {
+  //   name: 'Maya Heiss', 
+  // }, 
   {
     name: 'Jeremy Hasan', 
   }, 
@@ -57,9 +57,9 @@ const members = [
   {
     name: 'Bridget Won', 
   }, 
-  {
-    // name: 'Isaac Wood', 
-  }, 
+  // {
+  //   name: 'Isaac Wood', 
+  // }, 
 ]
 
 
