--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -2,7 +2,7 @@
 export function getStaticPaths() {
   return [
     {params: {path: 'adarsh'}},
-    {params: {path: undefined}}
+    // {params: {path: undefined}}
   ]
 }
 
