--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -1,12 +1,12 @@
 ---
 export function getStaticPaths() {
   return [
-    {params: {path: 'adarsh'}},
-    // {params: {path: undefined}}
-  ]
+    {params: {username: 'adarsh'}},
+    {params: {username: undefined}},
+  ];
 }
 
-const { path } = Astro.params;
+const { username } = Astro.params;
 
 import defaultBio from './defaultBio.js'
 import updateUserData from './updateUserData.js'
