--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -1,9 +1,9 @@
 ---
 export function getStaticPaths() {
   return [
-    {params: {dog: 'clifford'}},
-    {params: {dog: 'rover'}},
-    {params: {dog: 'spot'}},
+    {params: {username: 'clifford'}},
+    {params: {username: 'rover'}},
+    {params: {username: 'spot'}},
   ];
 }
 
