--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -1,120 +1,21 @@
 ---
 export function getStaticPaths() {
   return [
-    {params: {username: 'clifford'}},
-    {params: {username: 'rover'}},
-    {params: {username: 'spot'}},
+    {params: {username: 'admin'}},
+    // {params: {username: 'rover'}},
+    // {params: {username: 'spot'}},
   ];
 }
 
 const { username } = Astro.params;
 
-import defaultBio from './defaultBio.js'
-import updateUserData from './updateUserData.js'
-
 import MemberPageTemplate from '../../components/memberPageTemplate.astro'
 
-var userData = {
-  username: 'adarsh', 
-  name: 'Adarsh Kumar',
-  role: {
-    name: 'Website Manager', 
-  }, 
-  pronunciation: false, //'Uh-da-r-sh',
-  email: {
-    g4g: true,
-    dtech: {
-      year: 25,
-    },
-  }, 
-  pfp: {
-    g4g: {
-      sizes: [
-        {
-          ext: 'png',
-          name: 'full', 
-        }, 
-      ],
-    },
-    google: {
-      url: 'AEdFTp7icI4wRK0FPsc17CnhxoQslGk8Pj8cUQo8a6S80w',
-    }, 
-  },
-  location: {
-    city: 'Bay Area', 
-    state: '',
-  }, 
-  bio: {
-    w1: 'the',
-    w2: 'for',
-    end: 'He enjoys playing the piano, coding, and video games.', 
-  }, 
-  socials: [
-    {
-      url: 'https://adarshrkumar.dev', 
-      name: 'Website', 
-    }, 
-    {
-      url: 'https://youtube.com/adarshrkumar', 
-      name: 'YouTube', 
-    }, 
-    {
-      url: 'https://instagram.com/adarshrkumar', 
-      name: 'Instagram', 
-    }, 
-    {
-      url: 'https://threads.net/@adarshrkumar', 
-      name: 'Threads', 
-    }, 
-    {
-      url: 'https://X.com/@adarshrkumar', 
-      name: 'X', 
-    }, 
-    // {
-    //   url: 'https://twitch.tv/RockGamerAK', 
-    //   name: 'Twitch', 
-    // }, 
-    // {
-    //   url: 'https://kick.com/RockGamerAK', 
-    //   name: 'Kick', 
-    // }, 
-    {
-      url: 'https://discord.com/users/768273827549282305', 
-      name: 'Discord'
-    }, 
-    {
-      url: 'https://instagram.com/akumarrws', 
-      name: 'Instagram', 
-    }, 
-    {
-      url: 'https://threads.net/@akumarrws', 
-      name: 'Threads', 
-    }, 
-    {
-      url: 'https://instagram.com/akumar.photos', 
-      name: 'Instagram', 
-    }, 
-    {
-      url: 'https://X.com/akumarrws', 
-      name: 'X', 
-    }, 
-    {
-      url: 'https://discord.com/users/1097241365198409728', 
-      name: 'Discord', 
-    }, 
-  ],
-  portfolio: [
-    // {
-    //   img: {
-    //     path: 'IMG_4052.png'
-    //   },
-    //   capt: '<a href="https://parks.RockGamerAK.com">A website</a> that I made promoting saving parks!',
-    //   desc: `Made by: <a href="/members/adarsh">Adarsh</a>`,
-    // },
-  ],
-}
+var userData = {}
 
-userData = updateUserData(userData)
+fetch(`https://database.graphics-for-good.com/getMemberInfo?username=${username}`)
+  .then(res => res.json())
+  .then(json => userData = json)
 
 import Layout from '../../layouts/Layout.astro'
 
