--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -22,4 +22,5 @@ import Layout from '../../layouts/Layout.astro'
 import '../../styles/pages/members.scss'
 import '../../styles/photos.scss'
 ---
-<MemberPageTemplate userData={userData} />
+{userData}
+<!-- <MemberPageTemplate userData={userData} /> -->
