--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -22,5 +22,5 @@ import Layout from '../../layouts/Layout.astro'
 import '../../styles/pages/members.scss'
 import '../../styles/photos.scss'
 ---
-{userData}
+<pre>{JSON.stringify(userData, null, 4)}</pre>
 <!-- <MemberPageTemplate userData={userData} /> -->
