--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -22,5 +22,4 @@ import Layout from '../../layouts/Layout.astro'
 import '../../styles/pages/members.scss'
 import '../../styles/photos.scss'
 ---
-<pre>{JSON.stringify(userData, null, 4)}</pre>
-<!-- <MemberPageTemplate userData={userData} /> -->
+<MemberPageTemplate userData={userData} />
