--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -1,9 +1,9 @@
 ---
 var members = []
 
-await fetch(`https://database.graphics-for-good.com/getUsernames`)
+await fetch(`https://database.graphics-for-good.com/getAllMembers`)
     .then(res => res.json())
-    .then(json => usernames = json.response)
+    .then(json => members = json.response)
 
 
 import Layout from '../layouts/Layout.astro'
