--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -29,6 +29,10 @@ export function getStaticPaths() {
         {params: {username: 'samantha'}}, 
         {params: {username: 'sayuri'}}, 
         {params: {username: 'shikha'}}, 
+
+        {params: {username: 'juhi'}}, 
+        {params: {username: 'rien'}}, 
+        {params: {username: 'sam'}}, 
     ];
 }
 
