--- a/src/components/infobox.astro
+++ b/src/components/infobox.astro
@@ -3,7 +3,7 @@ import '../styles/components/infobox.scss'
 ---
 <dialog id="infobox" class="infobox">
   <a href="javascript:closeInfobox()" draggable="false">
-    <img src="/assets/icons/X.svg" class="cSpan" draggable="false">
+    <img src="/assets/icons/x.svg" class="cSpan" draggable="false">
   </a>
   <div class="infobox-inner"></div>
 </dialog>
