--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -3,24 +3,20 @@ import '../styles/components/header.scss'
 ---
 <a id="go2content" href="javascript:scrollToNum()">Skip to Content</a>
 <header class="header">
-  <div class="logo-parent">
+  <a href="/" class="logo-parent">
     <img class="logo" src="/assets/Logo-Blank.svg" alt="Graphics for Good Logo" title="Our Logo">
-  </div>
+  </a >
   <nav class="nav">
     <input type="checkbox" id="closeNav" style="--display: none;" />
     <label for="closeNav" class="nav-hbg">
-      <span class="material-symbols-outlined icon">
-        menu
-      </span>
+      <span class="material-symbols-outlined icon">menu</span>
     </label>
     <div class="nav-btns">
       <div class="nav-btns__inner">
         <div class="nav-info">
           <h3>Navigation</h3>
           <label for="closeNav" class="mob-nav-clse">
-            <span class="material-symbols-outlined icon">
-              close
-            </span>
+            <span class="material-symbols-outlined icon">close</span>
           </label>
         </div>
         <a href="/" class="btn">Home</a>
