--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -30,7 +30,7 @@ import '../styles/photos.scss'
                         var username = member.username
                         return (
                             <a href={
-                                `/members/${username}`
+                                `/members/${username}/`
                             }>
                                 <li>
                                     {member.name}
