--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -53,7 +53,7 @@ if (path.endsWith('/') && path !== '/') path = path.slice(0, path.length-1)
             var lPath = link.path
             if (!path) {
               lPath = link.name.toLowerCase()
-              if (lPath.includes(' ')) lPath = lPath.split(' ')join('')
+              if (lPath.includes(' ')) lPath = lPath.split(' ').join('')
             }
 
           if (lPath === path) a.classList.add('primary')
