--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -1,4 +1,4 @@
----
+#---
 import Layout from '../../layouts/Layout.astro'
 
 import '../../styles/pages/members.scss'
@@ -38,6 +38,7 @@ export function getStaticPaths() {
         {params: {username: 'juhi'}}, 
         {params: {username: 'rien'}}, 
         {params: {username: 'sam'}}, 
+        {params: {username: undefined}}, 
     ];
 }
 
