--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -45,6 +45,7 @@ const { username } = Astro.params;
 import MemberPageTemplate from '../../components/memberPageTemplate.astro'
 
 var userData = {}
+var code = 000
 
 await fetch(`https://database.graphics-for-good.com/getMemberInfo?username=${username}`)
     .then(res => res.json())
