--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -66,7 +66,9 @@ await fetch(`https://database.graphics-for-good.com/getMemberInfo?username=${use
     <section>
       {
         code === 200 ? 
-        <img class="pfp" id="pfp" src={userData.pfp.url}></span>
+        <img class="pfp" id="pfp" src={
+          !!userData.pfp ? userData.pfp.url : userData.pfp
+        }></span>
         <h1 class="name" id="name">{userData.nameNoTitle}</h1>
         <a class="email" id="email" href={`mailto:${userData.email.address}`}>{userData.email.address}</a>
         <a class="location" id="location" href={userData.location.mapLink}>
