--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -80,7 +80,7 @@ await fetch(`https://database.graphics-for-good.com/getMemberInfo?username=${use
         }>
           <div></div>
           <span>{
-            !!userData.location ? userData.location : userData.location.combined
+            !!userData.location ? userData.location.combined : userData.location
           }</span>
         </a>
         <ul class="socials">
